# GPgyro

./: GPgyro.py  README.md  X.npy  pyproject.toml  sample_FC.npy  yerr.npy  yerr_fc.npy
src/GPgyro/: __init__.py  gpgyro.py
src/GPgyro/data/: X_fc.npy  sample_PC.npy  y.npy  y_fc.npy
